--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "goit-react-ts-hw-04-phonebook",
+  "name": "goit-react-ts-hw-06-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iryabenkoff.github.io/goit-react-ts-hw-04-phonebook",
+  "homepage": "https://iryabenkoff.github.io/goit-react-ts-hw-06-phonebook",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +12,12 @@
     "@types/node": "^16.18.42",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
-    "sass": "^1.66.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
